packages/dartcv/src/core/mat.h

MatStep cv_Mat_step(Mat self);
VecI32* cv_Mat_size(Mat self);
CvStatus* cv_Mat_sqrt(Mat self, Mat rval, CvCallback_0 callback);
CvStatus* cv_Mat_t(Mat self, Mat* rval, CvCallback_0 callback);
void cv_Mat_set_u8_1(Mat self, int i0, uint8_t val);
void cv_Mat_set_u8_2(Mat self, int i0, int i1, uint8_t val);
void cv_Mat_set_u8_3(Mat self, int i0, int i1, int i2, uint8_t val);
void cv_Mat_set_i8_1(Mat self, int i0, int8_t val);
void cv_Mat_set_i8_2(Mat self, int i0, int i1, int8_t val);
void cv_Mat_set_i8_3(Mat self, int i0, int i1, int i2, int8_t val);
void cv_Mat_set_i16_1(Mat self, int i0, int16_t val);
void cv_Mat_set_i16_2(Mat self, int i0, int i1, int16_t val);
void cv_Mat_set_i16_3(Mat self, int i0, int i1, int i2, int16_t val);
void cv_Mat_set_u16_1(Mat self, int i0, uint16_t val);
void cv_Mat_set_u16_2(Mat self, int i0, int i1, uint16_t val);
void cv_Mat_set_u16_3(Mat self, int i0, int i1, int i2, uint16_t val);
void cv_Mat_set_i32_1(Mat self, int i0, int32_t val);
void cv_Mat_set_i32_2(Mat self, int i0, int i1, int32_t val);
void cv_Mat_set_i32_3(Mat self, int i0, int i1, int i2, int32_t val);
void cv_Mat_set_f32_1(Mat self, int i0, float_t val);
void cv_Mat_set_f32_2(Mat self, int i0, int i1, float_t val);
void cv_Mat_set_f32_3(Mat self, int i0, int i1, int i2, float_t val);
void cv_Mat_set_f64_1(Mat self, int i0, double_t val);
void cv_Mat_set_f64_2(Mat self, int i0, int i1, double_t val);
void cv_Mat_set_f64_3(Mat self, int i0, int i1, int i2, double_t val);
void cv_Mat_set_Vec6i(Mat self, int i0, int i1, Vec6i val);
void cv_Mat_set_Vec8i(Mat self, int i0, int i1, Vec8i val);