packages/dartcv/lib/src/g/core.g.dart


  late final _cv_Mat_set_Vec6iPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec6i)>>(
      'cv_Mat_set_Vec6i');
  late final _cv_Mat_set_Vec6i = _cv_Mat_set_Vec6iPtr
      .asFunction<void Function(Mat, int, int, Vec6i)>(isLeaf: true);

  void cv_Mat_set_Vec8i(
    Mat self,
    int i0,
    int i1,
    Vec8i val,
  ) {
    return _cv_Mat_set_Vec8i(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec8iPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec8i)>>(
      'cv_Mat_set_Vec8i');
  late final _cv_Mat_set_Vec8i = _cv_Mat_set_Vec8iPtr
      .asFunction<void Function(Mat, int, int, Vec8i)>(isLeaf: true);

  void cv_Mat_set_f32_1(
    Mat self,
    int i0,
    double val,
  ) {
    return _cv_Mat_set_f32_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_f32_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, float_t)>>(
          'cv_Mat_set_f32_1');
  late final _cv_Mat_set_f32_1 = _cv_Mat_set_f32_1Ptr
      .asFunction<void Function(Mat, int, double)>(isLeaf: true);

  void cv_Mat_set_f32_2(
    Mat self,
    int i0,
    int i1,
    double val,
  ) {
    return _cv_Mat_set_f32_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_f32_2Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, float_t)>>(
      'cv_Mat_set_f32_2');
  late final _cv_Mat_set_f32_2 = _cv_Mat_set_f32_2Ptr
      .asFunction<void Function(Mat, int, int, double)>(isLeaf: true);

  void cv_Mat_set_f32_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    double val,
  ) {
    return _cv_Mat_set_f32_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_f32_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, float_t)>>('cv_Mat_set_f32_3');
  late final _cv_Mat_set_f32_3 = _cv_Mat_set_f32_3Ptr
      .asFunction<void Function(Mat, int, int, int, double)>(isLeaf: true);

  void cv_Mat_set_f64_1(
    Mat self,
    int i0,
    double val,
  ) {
    return _cv_Mat_set_f64_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_f64_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, double_t)>>(
          'cv_Mat_set_f64_1');
  late final _cv_Mat_set_f64_1 = _cv_Mat_set_f64_1Ptr
      .asFunction<void Function(Mat, int, double)>(isLeaf: true);

  void cv_Mat_set_f64_2(
    Mat self,
    int i0,
    int i1,
    double val,
  ) {
    return _cv_Mat_set_f64_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_f64_2Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, double_t)>>(
      'cv_Mat_set_f64_2');
  late final _cv_Mat_set_f64_2 = _cv_Mat_set_f64_2Ptr
      .asFunction<void Function(Mat, int, int, double)>(isLeaf: true);

  void cv_Mat_set_f64_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    double val,
  ) {
    return _cv_Mat_set_f64_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_f64_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, double_t)>>('cv_Mat_set_f64_3');
  late final _cv_Mat_set_f64_3 = _cv_Mat_set_f64_3Ptr
      .asFunction<void Function(Mat, int, int, int, double)>(isLeaf: true);

  void cv_Mat_set_i16_1(
    Mat self,
    int i0,
    int val,
  ) {
    return _cv_Mat_set_i16_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_i16_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int16)>>(
          'cv_Mat_set_i16_1');
  late final _cv_Mat_set_i16_1 = _cv_Mat_set_i16_1Ptr
      .asFunction<void Function(Mat, int, int)>(isLeaf: true);

  void cv_Mat_set_i16_2(
    Mat self,
    int i0,
    int i1,
    int val,
  ) {
    return _cv_Mat_set_i16_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_i16_2Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, ffi.Int16)>>(
      'cv_Mat_set_i16_2');
  late final _cv_Mat_set_i16_2 = _cv_Mat_set_i16_2Ptr
      .asFunction<void Function(Mat, int, int, int)>(isLeaf: true);

  void cv_Mat_set_i16_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    int val,
  ) {
    return _cv_Mat_set_i16_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_i16_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int16)>>('cv_Mat_set_i16_3');
  late final _cv_Mat_set_i16_3 = _cv_Mat_set_i16_3Ptr
      .asFunction<void Function(Mat, int, int, int, int)>(isLeaf: true);

  void cv_Mat_set_i32_1(
    Mat self,
    int i0,
    int val,
  ) {
    return _cv_Mat_set_i32_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_i32_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int32)>>(
          'cv_Mat_set_i32_1');
  late final _cv_Mat_set_i32_1 = _cv_Mat_set_i32_1Ptr
      .asFunction<void Function(Mat, int, int)>(isLeaf: true);

  void cv_Mat_set_i32_2(
    Mat self,
    int i0,
    int i1,
    int val,
  ) {
    return _cv_Mat_set_i32_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_i32_2Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, ffi.Int32)>>(
      'cv_Mat_set_i32_2');
  late final _cv_Mat_set_i32_2 = _cv_Mat_set_i32_2Ptr
      .asFunction<void Function(Mat, int, int, int)>(isLeaf: true);

  void cv_Mat_set_i32_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    int val,
  ) {
    return _cv_Mat_set_i32_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_i32_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int32)>>('cv_Mat_set_i32_3');
  late final _cv_Mat_set_i32_3 = _cv_Mat_set_i32_3Ptr
      .asFunction<void Function(Mat, int, int, int, int)>(isLeaf: true);

  void cv_Mat_set_i8_1(
    Mat self,
    int i0,
    int val,
  ) {
    return _cv_Mat_set_i8_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_i8_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int8)>>(
          'cv_Mat_set_i8_1');
  late final _cv_Mat_set_i8_1 = _cv_Mat_set_i8_1Ptr
      .asFunction<void Function(Mat, int, int)>(isLeaf: true);

  void cv_Mat_set_i8_2(
    Mat self,
    int i0,
    int i1,
    int val,
  ) {
    return _cv_Mat_set_i8_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_i8_2Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, ffi.Int8)>>(
      'cv_Mat_set_i8_2');
  late final _cv_Mat_set_i8_2 = _cv_Mat_set_i8_2Ptr
      .asFunction<void Function(Mat, int, int, int)>(isLeaf: true);

  void cv_Mat_set_i8_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    int val,
  ) {
    return _cv_Mat_set_i8_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_i8_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int8)>>('cv_Mat_set_i8_3');
  late final _cv_Mat_set_i8_3 = _cv_Mat_set_i8_3Ptr
      .asFunction<void Function(Mat, int, int, int, int)>(isLeaf: true);

  void cv_Mat_set_u16_1(
    Mat self,
    int i0,
    int val,
  ) {
    return _cv_Mat_set_u16_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_u16_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Uint16)>>(
          'cv_Mat_set_u16_1');
  late final _cv_Mat_set_u16_1 = _cv_Mat_set_u16_1Ptr
      .asFunction<void Function(Mat, int, int)>(isLeaf: true);

  void cv_Mat_set_u16_2(
    Mat self,
    int i0,
    int i1,
    int val,
  ) {
    return _cv_Mat_set_u16_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_u16_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Uint16)>>('cv_Mat_set_u16_2');
  late final _cv_Mat_set_u16_2 = _cv_Mat_set_u16_2Ptr
      .asFunction<void Function(Mat, int, int, int)>(isLeaf: true);

  void cv_Mat_set_u16_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    int val,
  ) {
    return _cv_Mat_set_u16_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_u16_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Uint16)>>('cv_Mat_set_u16_3');
  late final _cv_Mat_set_u16_3 = _cv_Mat_set_u16_3Ptr
      .asFunction<void Function(Mat, int, int, int, int)>(isLeaf: true);

  void cv_Mat_set_u8_1(
    Mat self,
    int i0,
    int val,
  ) {
    return _cv_Mat_set_u8_1(
      self,
      i0,
      val,
    );
  }

  late final _cv_Mat_set_u8_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Uint8)>>(
          'cv_Mat_set_u8_1');
  late final _cv_Mat_set_u8_1 = _cv_Mat_set_u8_1Ptr
      .asFunction<void Function(Mat, int, int)>(isLeaf: true);

  void cv_Mat_set_u8_2(
    Mat self,
    int i0,
    int i1,
    int val,
  ) {
    return _cv_Mat_set_u8_2(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_u8_2Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, ffi.Uint8)>>(
      'cv_Mat_set_u8_2');
  late final _cv_Mat_set_u8_2 = _cv_Mat_set_u8_2Ptr
      .asFunction<void Function(Mat, int, int, int)>(isLeaf: true);

  void cv_Mat_set_u8_3(
    Mat self,
    int i0,
    int i1,
    int i2,
    int val,
  ) {
    return _cv_Mat_set_u8_3(
      self,
      i0,
      i1,
      i2,
      val,
    );
  }

  late final _cv_Mat_set_u8_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Uint8)>>('cv_Mat_set_u8_3');
  late final _cv_Mat_set_u8_3 = _cv_Mat_set_u8_3Ptr
      .asFunction<void Function(Mat, int, int, int, int)>(isLeaf: true);

  ffi.Pointer<VecI32> cv_Mat_size(
    Mat self,
  ) {
    return _cv_Mat_size(
      self,
    );
  }

  late final _cv_Mat_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<VecI32> Function(Mat)>>(
          'cv_Mat_size');
  late final _cv_Mat_size = _cv_Mat_sizePtr
      .asFunction<ffi.Pointer<VecI32> Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_sqrt(
    Mat self,
    Mat rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_sqrt(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_sqrtPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_0)>>('cv_Mat_sqrt');
  late final _cv_Mat_sqrt = _cv_Mat_sqrtPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>();

  MatStep cv_Mat_step(
    Mat self,
  ) {
    return _cv_Mat_step(
      self,
    );
  }

  late final _cv_Mat_stepPtr =
      _lookup<ffi.NativeFunction<MatStep Function(Mat)>>('cv_Mat_step');
  late final _cv_Mat_step =
      _cv_Mat_stepPtr.asFunction<MatStep Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_t(
    Mat self,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_t(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_tPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_t');
  late final _cv_Mat_t = _cv_Mat_tPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<Mat>, imp1.CvCallback_0)>();
